--- a/_includes/head.hbs
+++ b/_includes/head.hbs
@@ -44,3 +44,6 @@
 <meta name="twitter:title" content="A website describing Eli Mellen's freelance services.">
 <meta name="twitter:description" content="Eli offers services in web development, user acceptance testing and quality assurance, technical support, documentation creation, spec. and requirements writing as well as other help.">
 <meta name="twitter:image" content="https://eli.li/images/yellow-coat.jpg">
+
+<!-- Mastodon Ownership --> 
+<link rel="me" href="https://toot.cafe/@eli_oat">
