adding a lazer.pizza ownership rel=me

--- a/_includes/head.hbs
+++ b/_includes/head.hbs
@@ -47,3 +47,4 @@
 
 <!-- Mastodon Ownership --> 
 <link rel="me" href="https://toot.cafe/@eli_oat">
+<link rel="me" href="https://lazer.pizza/@eli_oat">
